--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -33,6 +33,8 @@
 
 \newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
 
+\newcommand{\ctxs}{\mathsf{Ctxs}}
+
 \newcommand{\cuts}[1]{\mathsf{Cuts}[ #1 ]}
 
 \newcommand{\decomp}{\mathsf{Dec}}
@@ -82,8 +84,6 @@
 \newcommand{\head}[1]{\mathsf{hd}[ #1 ]}
 
 \newcommand{\headof}[1]{\mathsf{Head}_{#1}}
-
-\newcommand{\immsubtrees}[1]{\mathsf{ImmSubtrees}[ #1 ]}
 
 \newcommand{\instrules}[1]{\mathsf{InstRules}[ #1 ]}
 
