--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -43,6 +43,8 @@
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
+\newcommand{\derrule}[1]{\mathsf{DerRule}[ #1 ]}
+
 \newcommand{\ders}[1]{\mathsf{Ders}[ #1 ]}
 
 \newcommand{\derschc}{\textsc{DersCHC}\xspace}
@@ -55,13 +57,11 @@
 
 \newcommand{\dersrels}[2]{\mathsf{DersRels}[ #1, #2 ]}
 
-\newcommand{\derstep}[2]{\mathsf{DerStep}[ #1, #2 ]}
-
 \newcommand{\derstructs}[2]{\mathsf{DerStructs}[ #1, #2 ]}
 
 \newcommand{\dersubtrees}[1]{\mathsf{DerSubTrees}[ #1 ]}
 
-\newcommand{\dertrees}[1]{\mathsf{DerTrees}[ #1 ]}
+\newcommand{\dertrees}[2]{\mathsf{DerTrees}[ #1, #2 ]}
 
 \newcommand{\evalrules}{\mathsf{EvalRules}}
 
@@ -84,6 +84,8 @@
 \newcommand{\head}[1]{\mathsf{hd}[ #1 ]}
 
 \newcommand{\headof}[1]{\mathsf{Head}_{#1}}
+
+\newcommand{\immsubders}[1]{\mathsf{ImmSubs}[ #1 ]}
 
 \newcommand{\instrules}[1]{\mathsf{InstRules}[ #1 ]}
 
@@ -140,6 +142,8 @@
 \newcommand{\stlc}{\mathsf{STLC}}
 
 \newcommand{\subcuts}[2]{\mathsf{SubCuts}[ #1, #2 ]}
+
+\newcommand{\subders}[1]{\mathsf{SubDers}[ #1 ]}
 
 \newcommand{\subexps}[1]{\mathsf{SubExps}[ #1 ]}
 
